zno-macro-draft/tests/zno/ui/err/016-name-is-char.stderr
error: `name` value should be a string
 --> tests/zno/ui/err/016-name-is-char.rs:3:9
  |
3 | #[zno(name = 'b')]
  |         ^^^^
